# HexStickyNote

./: .gitignore  .mcp.json  LICENSE  README.md  package-lock.json  package.json
mcp-server/: package-lock.json  package.json
mcp-server/src/: cards.ts  index.ts  paths.ts  types.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: hexstickynote-mcp.mjs
src-tauri/src/: ai_manager.rs  ai_tools.rs  card_manager.rs  claude_mcp.rs  commands.rs  keyring_store.rs  lib.rs  local_inference.rs  local_model.rs  main.rs  settings_manager.rs  window_state.rs
src/lib/components/: AiPromptBar.svelte  Card.svelte  CardCarousel.svelte  Editor.svelte  Hud.svelte  LocalModelSettings.svelte  Orb.svelte  Settings.svelte
src/lib/stores/: cardStore.ts  index.ts  settingsStore.ts
src/routes/: +page.svelte
src/routes/orb/: +page.svelte
