[package]
name = "hex-sticky-note"
version = "0.1.0"
description = "Next-Gen AI Workspace"
authors = ["HexStickyNote Heikki Aittokumpu"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with streaming support
reqwest = { version = "0.12", features = ["json", "stream"] }

# Secure credential storage (Windows Credential Locker)
keyring = { version = "3", features = ["windows-native"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Stream utilities for SSE parsing
futures = "0.3"
tokio-stream = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID for card IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Lazy static initialization
once_cell = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Directory utilities for persistent storage
directories = "5"

# Local LLM inference with GGUF models
llama-cpp-2 = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
cuda = []
vulkan = []
rocm = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
